fix return to main page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <footer>
-        <p><a href="/index.html">Back to home page</a></p>
+        <p><a href="https://liam-grau.github.io/LiamGrau.com/">Back to home page</a></p>
     </footer>
 </body>
 
